# pitch_framing

./: .gitignore  .readthedocs.yaml  LICENSE  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  pitch_framing.rst
pitch_framing/: glove_tracker.py  statcast.py
src/pitch_framing/: glove_tracker.py
